# vexere-test

./: .gitignore  CODE_REVIEW.md  README.md  pyproject.toml  run_services.bat
services/data_service/app/: main.py
services/llm_service/app/: config.py  faq_data.csv  main.py
services/llm_service/app/logic/: utils.py
services/llm_service/app/routers/: llm.py
services/llm_service/app/schemas/: llm.py
services/user_gateway/app/: config.py  main.py
services/user_gateway/app/logic/: pipeline.py
services/user_gateway/app/routers/: gateway.py
services/user_gateway/app/schemas/: gateway.py
tests/: conftest.py  test_gateway_pipeline.py  test_llm_service.py
